--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Chatterbox</title>
+      <title>Patterbox</title>
       <!--JQUERY-->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <!--JQUERY-->
