telfone works on initial tests

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -14,5 +14,5 @@
   </head>
   <body>
     <div id="app"></div>
-  </body>
+  <script type="text/javascript" src="/public/dist/app.11847b746e4ad3b87c6b.js"></script></body>
 </html>
